--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,6 +18,7 @@ requirements:
     - sciline>=23.9.1
     - scipp>=23.8.0
     - scippnexus>=23.9.0
+    - pooch
 
 test:
   imports:
@@ -33,12 +34,12 @@ test:
 build:
   noarch: python
   script:
-    - pip install .
+    - python -m pip install .
 
 about:
   home: https://github.com/scipp/essnmx
   license: BSD-3-Clause
-  summary: Data reduction for NMX at the European Spallation Source
-  description: Data reduction for NMX at the European Spallation Source
+  summary: Data reduction for NMX at the European Spallation Source.
+  description: Data reduction for NMX at the European Spallation Source.
   dev_url: https://github.com/scipp/essnmx
   doc_url: https://scipp.github.io/essnmx
