--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version-file: '.github/workflows/python-version-ci'
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
-      - run: tox -e static
+      - uses: pre-commit/action@v3.0.0
+        with:
+          extra_args: --all-files
       - uses: pre-commit-ci/lite-action@v1.0.1
         if: always()
         with:
