Use common prettyname structure

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -22,14 +22,15 @@ requirements:
 
 test:
   imports:
-    - essnmx
+    - ess.nmx
   requires:
     - pytest
   source_files:
     - pyproject.toml
     - tests/
   commands:
-    - python -m pytest tests
+    # We ignore warnings during release package builds
+    - python -m pytest -Wignore tests
 
 build:
   noarch: python
