--- a/requirements/base.in
+++ b/requirements/base.in
@@ -5,7 +5,7 @@
 dask
 graphviz
 plopp
-sciline>=23.9.1
+sciline @ git+https://github.com/scipp/sciline@main
 scipp>=23.8.0
 scippnexus>=23.9.0
 pooch
