--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,9 @@ requires-python = ">=3.10"
 dependencies = [
   "dask",
   "graphviz",
+  "numpy<2.0.0",
   "plopp",
-  "sciline @ git+https://github.com/scipp/sciline@main",
+  "sciline>=24.06.0",
   "scipp>=23.8.0",
   "scippnexus>=23.9.0",
   "pooch",
