--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,11 @@ requires-python = ">=3.10"
 dependencies = [
   "dask",
   "graphviz",
-  "numpy<2.0.0",
+  "numpy",
   "plopp",
   "sciline>=24.06.0",
   "scipp>=23.8.0",
-  "scippnexus>=23.9.0",
+  "scippnexus>=23.12.0",
   "pooch",
   "pandas",
   "gemmi",
