--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       os-variant:
-        default: 'ubuntu-22.04'
+        default: 'ubuntu-24.04'
         type: string
       python-version:
         type: string
@@ -23,7 +23,7 @@ on:
   workflow_call:
     inputs:
       os-variant:
-        default: 'ubuntu-22.04'
+        default: 'ubuntu-24.04'
         type: string
       python-version:
         type: string
@@ -41,6 +41,21 @@ on:
         type: string
 
 jobs:
+  package-test:
+    runs-on: ${{ inputs.os-variant }}
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.checkout_ref }}
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ inputs.python-version }}
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install .
+      - run: python tests/package_test.py
+        name: Run package tests
+
   test:
     runs-on: ${{ inputs.os-variant }}
     env:
