--- a/requirements/nightly.in
+++ b/requirements/nightly.in
@@ -8,7 +8,10 @@ pandas
 gemmi
 defusedxml
 pytest
-scipp @ https://github.com/scipp/scipp/releases/download/nightly/scipp-nightly-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+scipp
+--index-url=https://pypi.anaconda.org/scipp-nightly-wheels/simple/
+--extra-index-url=https://pypi.org/simple
+--pre
 sciline @ git+https://github.com/scipp/sciline@main
 scippnexus @ git+https://github.com/scipp/scippnexus@main
 plopp @ git+https://github.com/scipp/plopp@main
