--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ requires-python = ">=3.10"
 # Make sure to list one dependency per line.
 dependencies = [
   "dask",
+  "essreduce>=24.02.3",
   "graphviz",
   "plopp",
   "sciline>=24.06.0",
