Data reduction wrapper interface  (#122)
* Executable module.

* Save crystal rotation.

* Fix crystal rotation.

* Remove all zero lines, not just the first one (#123)

* remove all zero lines, not just the first one

* Apply automatic formatting

* Update src/ess/nmx/mcstas/load.py

* Apply automatic formatting

---------

Co-authored-by: Aaron Finke <aaron.finke@ess.eu>
Co-authored-by: pre-commit-ci-lite[bot] <117423508+pre-commit-ci-lite[bot]@users.noreply.github.com>
Co-authored-by: Sunyoung Yoo <luysunyoung9@gmail.com>

* Apply suggestions from code review

Co-authored-by: Mridul Seth <mail@mriduls.com>

* Apply automatic formatting

* Add bitshuffle support, compress binned datasets using bitshuffle/LZ4 (#125)

* add bitshuffle support, compress binned datasets using bitshuffle/LZ4

* Apply automatic formatting

* Add docstring and option.

---------

Co-authored-by: Aaron Finke <aaron.finke@ess.eu>
Co-authored-by: pre-commit-ci-lite[bot] <117423508+pre-commit-ci-lite[bot]@users.noreply.github.com>
Co-authored-by: YooSunyoung <luysunyoung9@gmail.com>

* Update default space group in mtz io module (#126)

* Executable module.

* Save crystal rotation.

* Fix crystal rotation.

* Remove all zero lines, not just the first one (#123)

* remove all zero lines, not just the first one

* Apply automatic formatting

* Update src/ess/nmx/mcstas/load.py

* Apply automatic formatting

---------

Co-authored-by: Aaron Finke <aaron.finke@ess.eu>
Co-authored-by: pre-commit-ci-lite[bot] <117423508+pre-commit-ci-lite[bot]@users.noreply.github.com>
Co-authored-by: Sunyoung Yoo <luysunyoung9@gmail.com>

* Apply suggestions from code review

Co-authored-by: Mridul Seth <mail@mriduls.com>

* Apply automatic formatting

* Add bitshuffle support, compress binned datasets using bitshuffle/LZ4 (#125)

* add bitshuffle support, compress binned datasets using bitshuffle/LZ4

* Apply automatic formatting

* Add docstring and option.

---------

Co-authored-by: Aaron Finke <aaron.finke@

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,13 @@ dependencies = [
   "pandas",
   "gemmi",
   "defusedxml",
+  "bitshuffle",
 ]
 
 dynamic = ["version"]
+
+[project.scripts]
+essnmx_reduce_mcstas = "ess.nmx.mcstas.executables:main"
 
 [project.optional-dependencies]
 test = [
