Reduction workflow for ess nmx files (#146)
* Extract common part of command line helper.

* Extract chunk size argument since it means different numbers in real reduction.

* Add fallback compute position helper.

* Update fallback compute position function.

* Handle already folded data.

* Add executable module for real data.

* Return all result at the end.

* Remove unecessary comment [skip ci]

* Allow setting time bin edge from arguments.

* Add docstring [skip ci]

* Fix fast axis decision function and update compression option argument type

* Remove unecessary copy and add logging.

* Hardcode event time offset unit and make chunk size default to -1

* Apply scipp lower pin.

* fixed unit issue on even_time_offset

* nbins to be a number of bins instead of number of bin-edges [skip cip]

* Use enum instead of integer.

* "--compression" arg should be a string

* Add comment about tof/wavelength

* Add small nexus file for testing.

* Add command line CLI testing.

* Add command line CLI testing.

* Test with non-default values.

---------

Co-authored-by: Aaron Finke <aaron.finke@ess.eu>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
   "graphviz",
   "plopp>=24.7.0",
   "sciline>=24.06.0",
-  "scipp>=23.8.0",
+  "scipp>=25.3.0",
   "scippnexus>=23.12.0",
   "pooch>=1.5",
   "pandas>=2.1.2",
@@ -49,6 +49,7 @@ dynamic = ["version"]
 
 [project.scripts]
 essnmx_reduce_mcstas = "ess.nmx.mcstas.executables:main"
+essnmx-reduce = "ess.nmx.executables:main"
 
 [project.optional-dependencies]
 test = [
