--- a/requirements/nightly.in
+++ b/requirements/nightly.in
@@ -10,6 +10,7 @@ gemmi>=0.6.6
 defusedxml>=0.7.1
 bitshuffle>=0.5.2
 msgpack>=1.0.8
+tof>=25.12.0
 pytest>=7.0
 scipp
 --index-url=https://pypi.anaconda.org/scipp-nightly-wheels/simple/
