--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,6 @@ dependencies = [
   "defusedxml>=0.7.1",
   "msgpack>=1.0.8",
   "tof>=25.12.1",
-  "bitshuffle>=0.5.2;os_name == 'posix'"
 ]
 
 dynamic = ["version"]
@@ -53,6 +52,9 @@ essnmx_reduce_mcstas = "ess.nmx.mcstas.executables:main"
 essnmx-reduce = "ess.nmx.executables:main"
 
 [project.optional-dependencies]
+bitshuffle = [
+    "bitshuffle>=0.5.2;os_name == 'posix'"
+]
 test = [
     "pytest>=8.0",
 ]
